@@ -39,7 +39,7 @@
         #{build.coverage}%
 
   %td
-    - if defined?(controls) && current_user.can_manage_project?(@project.gitlab_id)
+    - if defined?(controls) && current_user.has_developer_access?(@project.gitlab_id)
       .pull-right
         - if build.active?
           = link_to cancel_project_build_path(build.project, build, return_to: request.original_url), title: 'Cancel build' do
