@@ -89,7 +89,7 @@
     .build-widget
       %h4.title
         Build
-        - if current_user.can_manage_project?(@project.gitlab_id)
+        - if current_user.has_developer_access?(@project.gitlab_id)
           .pull-right
             - if @build.active?
               = link_to "Cancel", cancel_project_build_path(@project, @build), class: 'btn btn-sm btn-danger'
